[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-simple-api"
version = "0.1.0"
description = "A simple FastAPI service to interact with Large Language Models (LLMs)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "LLM Simple API Maintainer" }
]
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "pydantic==2.5.0",
  "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/igardev/llmsimpleapi"


